2015-04-09  Nick Clifton  <nickc@redhat.com>

	* rx/crt0.S (_start): If string instructions are not allowed,
	avoid using SMOVF.

2015-04-08  Nick Clifton  <nickc@redhat.com>

	* rx/rx.ld: Add .note and DWARF3 sections.
	* rx/rx-sim.ld: Likewise.

2015-04-07  Nick Clifton  <nickc@redhat.com>

	* rl78/rl78.ld (.csstart): Add a KEEP directive.
	* rl78/rl78-sim.ld (.csstart): Add a KEEP directive.

2015-03-05  Nick Clifton  <nickc@redhat.com>

	* v850/sim.ld: Add a .note.renesas section.

2015-02-17  Renlin Li  <renlin.li@arm.com>

	* arm/crt0.S: Initialise __heap_limit when ARM_RDI_MONITOR is defined.
	* arm/syscalls.c: define __heap_limit global symbol.
	* arm/syscalls.c (_sbrk): Honour __heap_limit.

2015-02-11  Stefan Wallentowitz  <stefan.wallentowitz@tum.de>

	* or1k/or1k_uart.c: Write bugfix and cleanup/documentation.
	* or1k/or1k_uart.h: Cleanup.

2015-01-22  Yaakov Selkowitz  <yselkowi@redhat.com>

	* sparc/crt0.S: Declare use of system registers.
	* sparc/cygmon-crt0.S: Ditto.
	* sparc/erc32-crt0.S: Ditto.
	* sparc/traps.S: Ditto.

2015-01-21  Eric Botcazou  <ebotcazou@adacore.com>

	* configure.in: Add Visium support.
	* configure: Regenerate.
	* visium/: New directory.

2015-01-15  DJ Delorie  <dj@redhat.com>

	* rl78/crt0.S: Initialize .saddr.  Avoid using SEL.
	* rl78/rl78-sim.ld: Add .saddr/.frodata section.
	* rl78/rl78.ld: Likewise.
	* rl78/rl78-sim.ld: Make room for virtual register banks.
	* rl78/rl78.ld: Likewise.

	* rl78/vregs.h: New.
	* rl78-sys.h: Use it.
	* rl78/swrite.S: New.
	* rl78/Makefile.in: Build it.
	* rl78/write.c: Use it.

2015-01-14  Stefan Wallentowitz  <stefan.wallentowitz@tum.de>

	* or1k/include/or1k-sprs.h: New auto-generated header file.

2015-01-05  Yaakov Selkowitz  <yselkowi@redhat.com>

	* lm32/Makefile.in (install): Respect DESTDIR.
	(install-scripts): Ditto.
	* mep/Makefile.in (install): Ditto.
	* mt/Makefile.in (install): Ditto.
	* rl78/Makefile.in (install): Ditto.

2014-12-27  Anthony Green  <green@moxielogic.com>
